# study

./: README.md  winbond_code.rar
c_sample/gdb/: greeting.c
c_sample/h/: l2cap.h
c_sample/ipc/: msg.c  msgtool.c  pipe.c  popen3.c  semtool.c  shmtool.c  simple_fifo.c  simple_fifo_cli.c
c_sample/makfile/: Makefile  README  README.bak  init_env
c_sample/shell_p/: comP-x2  comp_x.txt  day.txt  hello  hello.txt  here.txt  local.txt  mydot.txt  myinput.txt  mypwd  mypwd.txt  myselect.txt  square.txt  x
c_sample/signal/: protect.c  setsingal.c  setsingal_int.c  timer.c  timer_pause.c
c_sample/socket/: simple_cli.c  simple_ser.c  udp_listener.c  udp_talker.c
c_sample/thread_p/: hello.c  mutex_hello.c  sema_hello.c  semaphor.c  semaphor.h
cmake/: readme.txt.txt
cmake/doc/: Cmake_memo.doc
cmake/test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello
cmake/test2/: CMakeLists.txt
cmake/test3/: CMakeLists.txt
cmake/test4/: CMakeLists.txt  main.c
cmake/test6/: CMakeLists.txt  main.c
cmake/test6/src1/: CMakeLists.txt  src1_hello.c  src1_hello.h
cmake/test6/src2/: CMakeLists.txt  src2_hello.c  src2_hello.h
data_structure/: circle_que.c  simknap_nrec-4.c
data_structure/dictionary/: dic_seqlist_binsearch.c
data_structure/graph/: graph_breadtravel_adjlist.c  graph_breadtravel_adjmat.c  graph_deeptravel_adjlist_nrec.c  graph_deeptravel_adjmat_nrec.c  graph_deeptravel_adjmat_rec.c
data_structure/list/: linkstring.c  llist.c
data_structure/puzzle/: jose_circlist.c  (+2 more)
tool/: extract_str.pl  pre_compile.pl
unpv22e/: unpv22e.rar
(+35 files in other folders)
